@@ -4,7 +4,9 @@
 ACE_RCSID (tao, Policy_Verifier, "$Id$")
 
 Policy_Verifier::Policy_Verifier (void)
-  : priority_bands_ (0)
+  : rt_object_properties_ (0)
+  , rt_poa_properties_ (0)
+  , priority_bands_ (0)
 {
   ACE_OS::strcpy (this->base_object_ref_,
                   ACE_TEXT("file://default.ior"));
@@ -14,7 +16,8 @@ Policy_Verifier::Policy_Verifier (void)
 
 Policy_Verifier::~Policy_Verifier (void)
 {
-  // No Op.
+  delete rt_object_properties_;
+  delete rt_poa_properties_;
 }
 
 bool
